apps/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-canary-app
  namespace: staging
  labels:
    app: gitops-canary-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitops-canary-app
  template:
    metadata:
      labels:
        app: gitops-canary-app
    spec:
      containers:
        - name: app
          image: ghcr.io/hiba-farah/gitops-canary-app:b1fec39
          ports:
            - containerPort: 8000
