apps/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-canary-app
  namespace: staging
spec:
  selector:
    app: gitops-canary-app
  ports:
    - port: 80
      targetPort: 8000
