apps/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-canary-app
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: staging.canary.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops-canary-app
                port:
                  number: 80
